Backend cleanup, readme update and docker compose update, added env.example

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - AUDIO_STORAGE_PATH=/app/audio_storage
     env_file:
-      - ./backend/.env
+      - .env
     depends_on:
       - db
       - redis
@@ -30,7 +30,7 @@ services:
     ports:
       - "3000:3000"
     env_file:
-      - ./frontend/.env
+      - .env
     depends_on:
       - backend
 
@@ -43,7 +43,7 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_DB=${POSTGRES_DB}
     env_file:
-      - ./backend/.env
+      - .env
     ports:
       - "5432:5432"
 
